--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: portfolYOU
 description: >- # this means to ignore newlines until "baseurl:"
   Always code as if the guy who ends up maintaining your code
   will be a violent psychopath who knows where you live.
-baseurl: "/portfolYOU"  # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/"  # the subpath of your site, e.g. /blog
+url: "https://mvdh7.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 repository: YoussefRaafatNasry/portfolYOU
 
 
