--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 # Site settings
-title: portfolYOU
+title: Matthew P. Humphreys
 description: >- # this means to ignore newlines until "baseurl:"
-  Always code as if the guy who ends up maintaining your code
-  will be a violent psychopath who knows where you live.
+  Seawater biogeochemistry and scientific programming
 baseurl: "/"  # the subpath of your site, e.g. /blog
 url: "https://mvdh7.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-repository: YoussefRaafatNasry/portfolYOU
+repository: mvdh7/mvdh7.github.io
 
 
 # Build settings
@@ -16,13 +15,13 @@ markdown: kramdown
 
 # Author Info
 author:
-  name     : John Doe
+  name     : Matthew P. Humphreys
   image    : https://i2.cdn.turner.com/cnnnext/dam/assets/140926165711-john-sutter-profile-image-large-169.jpg
-  email    : username@xyz.com
-  github   : username
-  twitter  : username
-  linkedin : username
-  facebook : username
+  email    : m.humphs@gmail.com
+  github   : mvdh7
+  twitter  : matthew_vdh
+  linkedin : matthew-p-humphreys-4745833a
+#  facebook : username
 
 
 # Collections
