Updates to about and timeline plus pubs to markdown

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,35 +1,34 @@
 - title: Postdoc, University of East Anglia
   from: 2017
   to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  description: Marine chemical speciation modelling. Understanding how uncertainties
+               in measurements of aqueous solution properties propagate through into
+               the calculated equilibrium state of seawater. Software development
+               and statistical simulations.
 
 - title: Postdoc, University of Southampton
   from: 2015
   to: 2017
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  description: Calibrating carbonate chemistry measurements for the Shelf Sea
+               Biogeochemistry and RAGNARoCC research programmes.
+               Quantifying seasonal cycles of carbon and nutrients in the northwest
+               European continental shelf sea and across the North Atlantic Ocean.
+               Lab manager for the CO<sub>2</sub> Facility.
 
-- title: PhD student, University of Southampton
+- title: PhD, University of Southampton
   from: 2011
   to: 2015
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  description: Measuring the marine carbonate system and developing software and
+               theoretical tools to better analyse it. Investigating natural and
+               anthropogenic changes in the oceanic CO<sub>2</sub> inventory.
+               Research cruises in the Arctic, North Atlantic, South Atlantic and
+               Southern Oceans for the UK Ocean Acidification and GEOTRACES research
+               programmes.
 
-- title: Undergrad & Masters, University of Cambridge
+- title: BA & MSci, University of Cambridge
   from: 2007
   to: 2011
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  description: Four years at Churchill College studying Natural Sciences, specialising
+               in Geology. Two month stint at the Bermuda Institute of Ocean Sciences
+               in summer 2010 for my Masters research project and an introduction
+               to the world of observational oceanography.
