--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ markdown: kramdown
 # Author Info
 author:
   name     : Matthew P. Humphreys
-#  image    : https://i2.cdn.turner.com/cnnnext/dam/assets/140926165711-john-sutter-profile-image-large-169.jpg
+  image    : https://github.com/mvdh7/mvdh7.github.io/blob/master/images/fallowfields.jpg
   email    : m.humphs@gmail.com
   github   : mvdh7
   twitter  : matthew_vdh
