--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Matthew P. Humphreys
 description: >- # this means to ignore newlines until "baseurl:"
-  Seawater biogeochemistry, scientific programming, and the marine carbon cycle
+  Seawater biogeochemistry, scientific programming, and the marine carbon&nbsp;cycle
 baseurl: "/"  # the subpath of your site, e.g. /blog
 url: "https://mvdh7.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 repository: mvdh7/mvdh7.github.io
