--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Matthew P. Humphreys
+title: Dr Matthew P. Humphreys
 description: >- # this means to ignore newlines until "baseurl:"
   Seawater biogeochemistry, scientific programming, and the marine carbon&nbsp;cycle
 baseurl: "/"  # the subpath of your site, e.g. /blog
