try adding software page

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:name
+  software:
+    output: true
+    permalink: /software/:name
 
 
 # Default values for collections
