--- a/_data/pubs-per-year.yml
+++ b/_data/pubs-per-year.yml
@@ -1,14 +1,19 @@
 - year: 2019
   number: 4
+  lead: 2
 
 - year: 2018
   number: 6
+  lead: 2
 
 - year: 2017
   number: 3
+  lead: 2
 
 - year: 2016
   number: 8
+  lead: 2
 
 - year: 2015
   number: 1
+  lead: 1
