--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,8 @@
+- title: Tenure-track scientist, Royal Netherlands Institute for Sea Research
+  from: soon
+  to:
+  description: Coming soon...
+
 - title: Postdoc, University of East Anglia
   from: 2017
   to: present
