--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,5 +1,5 @@
-- title: Tenure-track scientist, Royal Netherlands Institute for Sea Research
-  from: soon
+- title: Tenure-track scientist, NIOZ Texel
+  from: Nov 2019
   to:
   description: Coming soon...
 
