--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,4 +1,4 @@
-- title: Tenure-track scientist, NIOZ Texel
+- title: Tenure-track scientist, Royal NIOZ (Texel)
   from: Nov 2019
   to:
   description: Coming soon...
