--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -4,7 +4,7 @@
   description: Coming soon...
 
 - title: Postdoc, University of East Anglia
-  from: 2017
+  from: Nov 2017
   to: present
   description: Marine chemical speciation modelling. Understanding how uncertainties
                in measurements of aqueous solution properties propagate through into
@@ -12,8 +12,8 @@
                and statistical simulations.
 
 - title: Postdoc, University of Southampton
-  from: 2015
-  to: 2017
+  from: Apr 2015
+  to: Sep 2017
   description: Calibrating carbonate chemistry measurements for the Shelf Sea
                Biogeochemistry and RAGNARoCC research programmes.
                Quantifying seasonal cycles of carbon and nutrients in the northwest
@@ -21,8 +21,8 @@
                Lab manager for the CO<sub>2</sub> Facility.
 
 - title: PhD, University of Southampton
-  from: 2011
-  to: 2015
+  from: Sep 2011
+  to: Mar 2015
   description: Measuring the marine carbonate system and developing software and
                theoretical tools to better analyse it. Investigating natural and
                anthropogenic changes in the oceanic CO<sub>2</sub> inventory.
@@ -31,8 +31,8 @@
                programmes.
 
 - title: BA & MSci, University of Cambridge
-  from: 2007
-  to: 2011
+  from: Oct 2007
+  to: Jun 2011
   description: Four years at Churchill College studying Natural Sciences, specialising
                in Geology. Two month stint at the Bermuda Institute of Ocean Sciences
                in summer 2010 for my Masters research project and an introduction
