--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,11 +1,11 @@
-- title: Tenure-track scientist, Royal NIOZ (Texel)
+- title: Tenure-track scientist, NIOZ Texel
   from: Nov 2019
   to:
   description: Coming soon...
 
 - title: Postdoc, University of East Anglia
   from: Nov 2017
-  to: present
+  to: Sep 2019
   description: Marine chemical speciation modelling. Understanding how uncertainties
                in measurements of aqueous solution properties propagate through into
                the calculated equilibrium state of seawater. Software development
