Add basic plans

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,7 +1,9 @@
 - title: Tenure-track scientist, NIOZ Texel
   from: Nov 2019
   to:
-  description: Coming soon...
+  description: Ocean-going, observational carbonate chemistry. The marine carbon
+               cycle under a changing climate and its interactions with other biogeochemical
+               systems and ocean physics.
 
 - title: Postdoc, University of East Anglia
   from: Nov 2017
