Add software development

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,9 +1,9 @@
 - title: Tenure-track scientist, NIOZ Texel
   from: Nov 2019
   to:
-  description: Ocean-going, observational carbonate chemistry. The marine carbon
+  description: Ocean-going, observational carbonate chemistry.  The marine carbon
                cycle under a changing climate and its interactions with other biogeochemical
-               systems and ocean physics.
+               systems and ocean physics.  Scientific software development in Python and Julia.
 
 - title: Postdoc, University of East Anglia
   from: Nov 2017
